Fix overflow outside of page

--- a/style.css
+++ b/style.css
@@ -4,15 +4,14 @@ body {
 
 .flex-container {
    display: flex;
-   flex-wrap: wrap;
    flex-direction: row;
-   justify-content: center;
-   align-content: center;
+   flex-wrap: wrap;
    height: 100%;
+   justify-content: center;
 }
 
 .block {
-   margin: 10px;
+   margin:10px;
 }
 
 p {
